# dcr

./: Cargo.toml  Dockerfile  README.adoc  README.md  dcr.env  o.html
docker-builder/: Dockerfile
src/: lib.rs  main.rs
src/static/templates/: index.html
static/: index.html
static/templates/: index.html
