[package]
name = "dcr"
version = "0.2.0"
authors = ["David Buret <rmotfage@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.0"
actix-files = "0.1.1"
bytes = "0.4.12"
futures = "0.1.27"
log = "0.4.6"
env_logger = "0.6.1"
actix-rt = "0.2.2"
rand = "0.6.5"
serde = { version = "1.0.92", features = ["derive"] }
handlebars = "1.1.0"
serde_json = "1.0"