[package]
name = "dcr"
version = "0.2.5"
authors = ["David Buret <rmotfage@gmail.com>"]
edition = "2018"

[dependencies]
actix-web ="1.0.3"
actix-files = "0.1.3"
bytes ="0.4.12"
futures ="0.1.28"
log = "0.4.6"
env_logger ="0.6.2"
actix-rt ="0.2.3"
rand ="0.7.0"
serde = { version ="1.0.94", features = ["derive"] }
handlebars = "2.0.0"
serde_json = "1.0"